--- a/src/app/index.html
+++ b/src/app/index.html
@@ -33,8 +33,8 @@
           <a class="brand" href="#">XML Tree Gen</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="/#editor/visual">Editor</a></li>
+              <li><a href="#">Home</a></li>
+              <li class="active"><a href="/#editor/visual">Editor</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
